jump fix :rocket:

--- a/styles.css
+++ b/styles.css
@@ -48,15 +48,14 @@ h1 {
 	font-family: monospace;
 	display: block;
 	font-size: 1.4rem;
-	padding: 1.5rem 0rem;
+	margin: 1.5rem 0rem;
 	color: #eaeaea;
-	min-height: 40px;
 	word-wrap: break-word;
 	white-space: normal;
 	line-height: 1.2;
 	width: 100%;
-	min-height: 74px;
-	margin: 0;
+	min-height: 54px;
+	/* margin: 0; */
 }
 
 .container {
